# SPLFLIX

./: .gitignore  CMakeLists.txt  SPLFLIX.sln  SPLFLIX.vcxproj  SPLFLIX.vcxproj.filters  jser.cpp  jser.h
Debug/SPLFLIX.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SPLFLIX.lastbuildstate
include/: Action.h  Session.h  User.h  Watchable.h
source/: Action.cpp  Session.cpp  Watchable.cpp  test.cpp  user.cpp
